--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ header{
   margin-bottom: 50px;
 }
 
+
 html {
   box-sizing: border-box;
 }
@@ -22,7 +23,7 @@ header > h1 {
     max-width: 1024px;
     background-color: white;
     margin: 0 auto;
-  
+    padding-bottom: 100px;
    
 }
 
@@ -76,12 +77,17 @@ form > legend {
   margin-right: 20px;
 }
 
+.bold {
+  font-weight: 700;
+}
+
 .header-contact {
   display:grid;
   grid-template-columns: repeat(5, 1fr);
   justify-items: center;
   align-items: center;
   background-color: rgba(0, 140, 255, 0.616);
+  gap:40px;
 }
 
 .list-contacts {
@@ -89,6 +95,7 @@ form > legend {
   display:grid;
   grid-template-columns: repeat(5,1fr);
   text-align: center;
+  gap:15px;
 }
 
 .header-contact div{
